--- a/shop/package.json
+++ b/shop/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "connect-redis": "^9.0.0",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "ejs-locals": "^1.0.2",
@@ -9,7 +10,8 @@
     "express-session": "^1.18.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "redis": "^5.6.0"
   },
   "scripts": {
     "start": "nodemon server.js"
